feat(P2-2): Streamline manual hooking runtime-verified — DLSS SUPPORTED on Minecraft's Vulkan device; SlBridge FFM binding of sl.interposer.dll (slInit, Preferences ABI); proxy redirects for vkCreateInstance/vkEnumeratePhysicalDevices/vkCreateDevice with all-or-nothing chain guard; fix pc=0 crash (enumeration bypassed SL's instanceDeviceMap) + invokeExact ternary typing
Co-authored-by: claude <claude@dlssmc.local>